# TrainingMaterials

./: .gitignore  GeminiConversationalAgent.py  GeminiFunctionCallingWithLangchain.py  Job-shop_scheduling.py  N_Queens.ipynb  Nqueen.py  OpenAIFunctionCallingPrimitive.py  README.md  ReadMe.md  Readme.md  TSP.ipynb  TSP.txt  any.metta  city_coordinates.txt  file1.metta  file2.metta  file3.metta  file4.metta  file5and6.metta  filter.metta  ga_for_tsp_jssp_n-queens.py  genetic_algorithm.py  gpKnapsack.py  job_shop.py  jsp.ipynb  jssp.py  main.py  member_check.metta  n-queens.py  nQueen.py  non-determnistic-implementation.metta  nondeterminiticMeTTa.metta  optimizingMathFunction.py  pyproject.toml  readme.md  set_operations.metta  set_oprations.metta  space_manuplation.metta  space_operations.metta  task1.metta  (+15 more)
TrainingTask/: atomFunction.metta  genericFilter.metta  setFunctions.metta
genetic_algorithm/: evolution.py  types.py  utils.py
job_shop_scheduling/: JSS_example.py  job_shop_schedu_genetic.py
n_queens/: N_queens_Example.py  N_queens_backtrac.py  n_queens_genetic.py
problems/: gpJobShopScheduling.py  gpNQueen.py  gpTravellingSalesman.py  knapSack.py
trainingTask/: addAndremoveAtom.metta  genericFilterfunc.metta  setOperations.metta
traverse_selse_man/: TSM_example.py  traverse_selse_DP.py  traverse_selse_genetic.py
